--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,13 +2,15 @@
   "name": "Mastodon View Profile on My Mastodon Instance",
   "action": {},
   "manifest_version": 3,
-  "version": "0.1",
+  "version": "0.2",
   "description": "Shows the current Mastodon Profile from your Mastodon instance",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "storage"
   ],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "options_page": "options.html"
 }
