--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,5 +12,5 @@
   "background": {
     "service_worker": "background.js"
   },
-  "options_page": "options.html"
+  "options_page": "options/options.html"
 }
