--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,6 +9,12 @@
     "scripting",
     "storage"
   ],
+  "icons": {
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "64": "images/icon-64.png",
+    "128": "images/icon-128.png"
+  },
   "background": {
     "service_worker": "background.js"
   },
