--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,5 +18,10 @@
   "background": {
     "service_worker": "background.js"
   },
-  "options_page": "options/options.html"
+  "options_page": "options/options.html",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "mastodon-profile-redirect@bram.us"
+    }
+  }
 }
