📝 Rename + Update Description

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Mastodon View Profile on My Mastodon Instance",
+  "name": "Mastodon Profile Redirect",
   "action": {},
   "manifest_version": 3,
   "version": "0.2.1",
-  "description": "Shows the current Mastodon Profile from your Mastodon instance",
+  "description": "Rewrites Mastodon Profile URLs so that they are served from the Mastodon instance that hosts your account",
   "permissions": [
     "activeTab",
     "scripting",
