🐛 Add back service_worker field to please mozilla addons schema verifier

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,7 @@
     "128": "images/icon-128.png"
   },
   "background": {
+    "service_worker": "",
     "scripts": [ "background.js"]
   },
   "options_ui": {
