✨ Auto hijack follow button after page load. Does not work with SPA approach, though.

--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -15,6 +15,12 @@
     "64": "images/icon-64.png",
     "128": "images/icon-128.png"
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*/@*"],
+      "js": ["content.js"]
+    }
+  ],
   "background": {
     "service_worker": "background.js",
     "scripts": [
