✨ Unify Firefox and Chromium code

--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -16,8 +16,10 @@
     "128": "images/icon-128.png"
   },
   "background": {
-    "service_worker": "",
-    "scripts": [ "background.js"]
+    "service_worker": "background.js",
+    "scripts": [
+      "background.js"
+    ]
   },
   "options_ui": {
     "page": "options/options.html",
