🐛🦊 Fix content_scripts URL pattern to play nice with Firefox

--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*/@*"],
+      "matches": ["*://*/@*"],
       "js": ["content.js"]
     }
   ],
