--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://*/@*"],
+      "matches": ["*://*/*"],
       "js": ["content.js"]
     }
   ],
