--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -3,7 +3,7 @@
   "action": {},
   "manifest_version": 3,
   "version": "0.2.4",
-  "description": "Rewrites Mastodon Profile URLs so that they are served from the Mastodon instance that hosts your account",
+  "description": "Makes it easier to follow Mastodon Profile URLs from other instances.",
   "permissions": [
     "activeTab",
     "scripting",
