--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -21,6 +21,16 @@
     "service_worker": "background.js",
     "scripts": ["background.js"]
   },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "windows": "Alt+Shift+M",
+        "mac": "Alt+Shift+M",
+        "chromeos": "Alt+Shift+M",
+        "linux": "Alt+Shift+M"
+      }
+    }
+  },
   "options_ui": {
     "page": "options/options.html",
     "browser_style": false,
