--- a/src/manifest--base.json
+++ b/src/manifest--base.json
@@ -1,9 +1,9 @@
 {
-  "name": "Mastodon Profile Redirect",
+  "name": "Mastodon Redirector",
   "action": {},
   "manifest_version": 3,
   "version": "0.3.0",
-  "description": "Makes it easier to follow Mastodon Profile URLs from other instances.",
+  "description": "Redirect Mastodon URLs from other instances to your own instance.",
   "permissions": ["activeTab", "scripting", "storage"],
   "icons": {
     "16": "images/icon-16.png",
